# tree-sitter-test-script

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  \  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.tesc  tree-sitter-test_script.wasm  tree-sitter.json
bindings/c/: tree-sitter-test_script.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_test_script/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTestScript/: test_script.h
bindings/swift/TreeSitterTestScriptTests/: TreeSitterTestScriptTests.swift
src/: grammar.json  node-types.json  parser.c
